refactor(config): 移除 WindPropertySourceLoader TODO 注释